@@ -598,13 +598,15 @@ crosswalk.submission.MODS.stylesheet= crosswalks/mods-submission.xsl
 crosswalk.qdc.namespace.QDC.dc = http://purl.org/dc/elements/1.1/
 crosswalk.qdc.namespace.QDC.dcterms = http://purl.org/dc/terms/
 crosswalk.qdc.schemaLocation.QDC  = \
-  http://purl.org/dc/terms/ http://dublincore.org/schemas/xmls/qdc/2003/04/02/qualifieddc.xsd
+  http://purl.org/dc/terms/ http://dublincore.org/schemas/xmls/qdc/2006/01/06/dcterms.xsd \
+  http://purl.org/dc/elements/1.1/ http://dublincore.org/schemas/xmls/qdc/2006/01/06/dc.xsd
 crosswalk.qdc.properties.QDC = crosswalks/QDC.properties
 
 crosswalk.qdc.namespace.qdc.dc = http://purl.org/dc/elements/1.1/
 crosswalk.qdc.namespace.qdc.dcterms = http://purl.org/dc/terms/
 crosswalk.qdc.schemaLocation.qdc  = \
-  http://purl.org/dc/terms/ http://dublincore.org/schemas/xmls/qdc/2003/04/02/qualifieddc.xsd
+  http://purl.org/dc/terms/ http://dublincore.org/schemas/xmls/qdc/2006/01/06/dcterms.xsd \
+  http://purl.org/dc/elements/1.1/ http://dublincore.org/schemas/xmls/qdc/2006/01/06/dc.xsd
 crosswalk.qdc.properties.qdc = crosswalks/QDC.properties
 
 # METS ingester configuration:
